--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,15 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media(min-width: 500px){
+    nav{
+        width: 35%;
+    }
+
+    nav a{
+        font-size: 2.8rem;
+    }
+
+
+}
