--- a/css/index.css
+++ b/css/index.css
@@ -144,5 +144,21 @@ button:hover{
         font-size: 2.8rem;
     }
 
+    .title-container div{
+        width: 100%;
+        height: 35vh;
+    }
+    
+    .title-container hr{
+        width: 100%;
+    }
+
+    button{
+       padding: 1% 5%;
+       font-size: x-large; 
+    }
+        
+
+
 
 }
