--- a/css/index.css
+++ b/css/index.css
@@ -157,6 +157,19 @@ button:hover{
        padding: 1% 5%;
        font-size: x-large; 
     }
+
+    .artists-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    a{
+        display: flex;
+        justify-content: center;
+        font-size: 2.8rem;
+        margin: 1% 0;
+    }
         
 
 
